Bug 1643514 - Avoid requesting VR display when it already completed. r=kip,imanol, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D78437